--- a/caravan/style.css
+++ b/caravan/style.css
@@ -9,3 +9,15 @@
     height: 120px;
     background-color: red;
   }
+
+  .main-visual {
+    width: 100%;
+    height: 300px;
+    background-color: orange;
+  }
+
+  .main {
+    width: 100%;
+    height: 1400px;
+    background-color: green;
+  }
